simplify onTabComplete()