@@ -1,8 +1,5 @@
 package tokyo.nakanaka.shapeGenerator.sgSubCommandHandler;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 import tokyo.nakanaka.Direction;
 import tokyo.nakanaka.Player;
 import tokyo.nakanaka.UndoableCommand;
@@ -14,6 +11,8 @@ import tokyo.nakanaka.shapeGenerator.command.AdjustCommand;
 import tokyo.nakanaka.shapeGenerator.command.GenerateCommand;
 import tokyo.nakanaka.shapeGenerator.command.ShiftCommand;
 import tokyo.nakanaka.shapeGenerator.playerData.PlayerData;
+
+import java.util.List;
 
 /**
  * Handles "/sg shift" command
@@ -71,16 +70,14 @@ public class ShiftCommandHandler implements SubCommandHandler{
 	
 	@Override
 	public List<String> onTabComplete(PlayerData playerData, Player player, String[] args) {
-		if(args.length == 1) {
-			return List.of(Direction.values()).stream()
+		return switch (args.length) {
+			case 1 -> List.of(Direction.values()).stream()
 					.map(s -> s.toString().toLowerCase())
-					.collect(Collectors.toList());
-		}else if(args.length == 2) {
-			return List.of("0.5", "1.0", "1.5", "2.0", "2.5", "3.0", "3.5", "4.0",
+					.toList();
+			case 2 -> List.of("0.5", "1.0", "1.5", "2.0", "2.5", "3.0", "3.5", "4.0",
 					"5.0", "6.0", "6.5", "7.0", "7.5", "8.0", "8.5", "9.0", "9.5");
-		}else {
-			return List.of();
-		}
+			default -> List.of();
+		};
 	}
 	
 }
