@@ -1,14 +1,12 @@
 package tokyo.nakanaka.shapeGenerator.sgSubCommandHandler;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
 import tokyo.nakanaka.Player;
 import tokyo.nakanaka.logger.LogColor;
 import tokyo.nakanaka.shapeGenerator.SubCommandHandler;
 import tokyo.nakanaka.shapeGenerator.UndoCommandManager;
 import tokyo.nakanaka.shapeGenerator.playerData.PlayerData;
+
+import java.util.List;
 
 /**
  * Handles "/sg undo" command
@@ -56,10 +54,10 @@ public class UndoCommandHandler implements SubCommandHandler{
 	
 	@Override
 	public List<String> onTabComplete(PlayerData playerData, Player player, String[] args) {
-		if(args.length == 1) {
-			return Arrays.asList("1", "2", "3", "4", "5", "6", "7", "8", "9", "10");
-		}
-		return new ArrayList<>();
+		return switch (args.length) {
+			case 1 -> List.of("1", "2", "3", "4", "5", "6", "7", "8", "9");
+			default -> List.of();
+		};
 	}
 
 }
